--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -21,8 +21,11 @@
 <p>
 We dont want to push our ideas on to customers , we simply want to make what they want 
 </p>
+<div class="home">
 <a th:href="@{/signup}">
 <input type="button" value="Get Started"></a>
+</div>
+
 
 </body>
 </html>
