--- a/src/main/resources/static/css/style2.css
+++ b/src/main/resources/static/css/style2.css
@@ -1,3 +1,5 @@
+
+
 .container1 {
 	display: flex;
 	flex-wrap: wrap;
@@ -75,7 +77,8 @@ z-index:2;
 
 .pagination {
 	display: flex;
-	justify-content: center;
+	justify-content: space-evenly;
+	margin-left:200px;
 	margin-top: 40px;
 }
 
@@ -188,13 +191,14 @@ z-index:2;
 	margin: 40px auto;
 	border: 1px solid #ddd;
 	text-align: center;
+	/*margin-right:20px;*/
 	border-radius: 8px;
 	/*margin-right: 30px;
 	margin-top: 20px;*/
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 	overflow: hidden;
 	/* margin: 20px 0px;  Adjust margin as needed */
-	width: 900px;
+	width: auto;
 	height: 500px;
 	/*background-color: #fff;*/
 	transition: transform 0.3s ease-in-out;
@@ -211,6 +215,7 @@ z-index:2;
 .card1 img {
 	
 	height:250px;
+	/*width:600px;*/
 	width:600px;
 }
 
