--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 
-<title>Insert title here</title>
+<title>Home page</title>
 <!--  <link rel="stylesheet" th:href="@{/css/style.css}">-->
 
 <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet">
