--- a/src/main/resources/static/css/style1.css
+++ b/src/main/resources/static/css/style1.css
@@ -4,88 +4,89 @@ body {
 	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
-	/*display: flex;
-	align-items: center;
-            justify-content: center;
-            height: 100vh;*/
 	background-color: #FFCC99;
 }
 
-.container {
-	max-width: 450px;
-	/*max-height: 200px;*/
-	/*width: 10%;*/
-	margin: 0px 0px 60px 400px;
-	
-	/* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
+.signupContainer {
+    max-width: 700px;
+    margin: 50px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    background-color: #f5f5f5;
+    text-align: center;
 }
 
-form {
-	background-color: #fff;
-	padding: 20px;
-	border-radius: 8px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	top:10px;
-	transition: transform 0.3s ease-in-out;
-	z-index: 1;
-	position: relative;
+
+.signupContainer form {
+    display: flex;
+    flex-direction: column;
 }
 
-label {
-	display: block;
-	margin-bottom: 8px;
+.signupContainer label {
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+
+.signupContainer input,
+.signupContainer textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0 15px 0;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    font-style:italic;
+}
+
+/*.signupContainer .input-container {
+    display: flex;
+   align-items: center;
+    margin: 5px 17px;
+}
+*/
+.signupContainer input[type="checkbox"] {
+   
+      margin-right: 50px;
+      cursor: pointer;
+}
+
+.signupContainer textarea {
+    resize: vertical;
+}
+
+.signupContainer input[type="submit"],
+.signupContainer input[type="reset"] {
+    background-color: #4caf50;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top:10px;
+    font-weight: bold;
+    
+}
+
+.signupContainer input[type="submit"]:hover,
+.signupContainer input[type="reset"]:hover {
 	font-weight: bold;
+    background-color: #45a049;
 }
 
-input, textarea {
-	flex: 1;
-	width: 100%;
-	padding: 10px;
-	margin-bottom: 16px;
-	margin-bottom: 7px;
-	box-sizing: border-box;
-	border: none;
-	border-bottom: 3px solid #ccc;
-	border-left: 3px solid #ccc;
-	font-style: italic;
-	/*background-color: transparent;*/
-	border-radius: 4px;
+.signupContainer .message {
+    margin: 15px 0;
+    padding: 10px;
+    border-radius: 4px;
 }
 
-input[type="submit"] {
-	background-color: #4caf50;
-	color: white;
-	cursor: pointer;
+.signupContainer .message span {
+    color: 	#5A5A5A;
+    font-weight: bold;
 }
 
-
-.input-container input[type="checkbox"] {
-    margin-right : 80px;
-}
-
-.input-container label {
-    margin-left: 8px; /* Adjust the margin as needed */
-}
-
-.input-container label,
-.input-container input[type="checkbox"] {
-    flex-shrink: 0; /* Prevent checkbox and label from shrinking */
-}
-
-/*input[type="checkbox"] {
-			display: inline-block;
-			align-items : left;
-            margin-right: 200px;
-            
-        }*/
-input[type="submit"]:hover {
-	background-color: #45a049;
-}
-
-.input-container label {
-    display: inline-block;
-    margin-left: 80px; /* Adjust the margin as needed */
-}
 nav {
 	position:fixed;
 	background-color: #EC8565;
@@ -102,7 +103,7 @@ nav span {
 	padding: 14px 16px;
 	color: black;
 	z-index: 4;
-	font-size: 18px; /* Adjust the font size as needed */
+	font-size: 18px;
 }
 
 h2 {
@@ -132,7 +133,65 @@ nav a:hover {
 }
 
 .imageUser {
-	height:200px;
-	width:400px;
+	height:250px;
+	width:auto;
+}
+
+.loginContainer {
+    max-width: 600px;
+    margin: 80px auto;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    background-color: #f5f5f5;
+    text-align: center;
+}
+
+.loginContainer form {
 	
+    display: flex;
+    flex-direction: column;
+}
+.loginContainer label {
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.loginContainer input {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0 15px 0;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    font-style:italic;
+}
+
+.loginContainer input[type="submit"] {
+    background-color: #4caf50;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top:10px;
+    font-weight: bold;
+    
+}
+
+.loginContainer input[type="submit"]:hover {
+	font-weight: bold;
+    background-color: #45a049;
+}
+
+.loginContainer .message {
+    margin: 15px 0;
+    padding: 10px;
+    border-radius: 4px;
+}
+
+.loginContainer .message span {
+    color: 	#5A5A5A;
+    font-weight: bold;
 }
