--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -58,7 +58,8 @@
         <input type="password" id="password" name="password" placeholder="enter your password" required>
         
         <input type="submit" value="LOGIN">
-        <span><a th:href="@{/signup}"> CREATE YOUR ACCOUNT</a> </span>
+        <span> If not registered<a th:href="@{/signup}"> CREATE AN ACCOUNT</a> </span><br>
+        <a th:href="@{/forgotPassword}"> Forgot Password</a>
     </form>
 </div>
 
