forgot-password backend part is haf done

--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -20,7 +20,7 @@
 		 <form th:action="@{/process-forgotPassword}" method="post">
         
         <h2>Forgot Password </h2>
-        <input type="email" id="username" name="username" placeholder="enter your email" required><br>
+        <input type="email" id="email" name="email" placeholder="enter your email" required><br>
         
        
         
