email send and otp verified successfully

--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -17,6 +17,20 @@
 
 <div class="forgotContainer">
 
+
+			<div th:if="${error != null}">
+			<div class="message">
+			<p>[[${error}]]</p>
+			</div>
+			</div>
+		
+		
+		<div th:if="${param.success}">
+			<div class="message">
+			<p>OTP is send to your email</p>
+			</div>
+			</div> 
+			
 		 <form th:action="@{/process-forgotPassword}" method="post">
         
         <h2>Forgot Password </h2>
