--- a/src/main/resources/templates/newPassword.html
+++ b/src/main/resources/templates/newPassword.html
@@ -16,7 +16,7 @@
         <h2> ENTER NEW PASSWORD </h2>
         <input type="text" id="otp" name="newPassword" placeholder="enter new Password" required><br>
         
-        <h2> RE-ENTER NEW PASSWORD </h2>
+        <h2> CONFIRM NEW PASSWORD </h2>
         <input type="text" id="otp" name="otp" placeholder="re-enter new Password" required><br>
         
    <input type="submit" value="CHANNGE PASSWORD">
