forgot password module

--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -20,7 +20,7 @@
 
 			<div th:if="${error != null}">
 			<div class="message">
-			<p>[[${error}]]</p>
+			<span>[[${error}]]</span>
 			</div>
 			</div>
 		
