successfully updated password project almost complete

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,9 +18,12 @@
 
   <div th:if="${error != null}">
     <div class="message">
-        <span th:utext="${error}"></span>
+        <span th:text="${error}"></span>
     </div>
 </div>
+	
+
+	
 	
     <div th:if="${param.logout}">
 			<div class="message">
