--- a/src/main/resources/templates/newPassword.html
+++ b/src/main/resources/templates/newPassword.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -10,14 +11,23 @@
 
 	
 	<div class="forgotContainer">
+	
+	
+	<div th:if="${error != null}">
+			<div class="message">
+			<span>[[${error}]]</span>
+			</div>
+			</div>
 
 		 <form th:action="@{/change-password}" method="post">
         
+        
+        
         <h2> ENTER NEW PASSWORD </h2>
-        <input type="text" id="otp" name="newPassword" placeholder="enter new Password" required><br>
+        <input type="password" id="newPassword" name="newPassword" placeholder="enter new Password" required><br>
         
         <h2> CONFIRM NEW PASSWORD </h2>
-        <input type="text" id="otp" name="otp" placeholder="re-enter new Password" required><br>
+        <input type="password" id="confirmPassword" name="confirmPassword" placeholder="re-enter new Password" required><br>
         
    <input type="submit" value="CHANNGE PASSWORD">
         
